--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@react-navigation/native": "^6.0.13",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
+    "install": "^0.13.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-web": "~0.18.7"
+    "react-native-swiper": "^1.6.0",
+    "react-native-web": "~0.18.7",
+    "swiper": "^8.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
