--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-dropdown-select-list": "^1.0.21",
+    "react-native-elements": "^3.4.2",
+    "react-native-paper": "^4.12.5",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
