--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "swiper": "^8.4.2"
+    "swiper": "^8.4.2",
+    "lottie-react-native": "5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
