--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@react-navigation/native": "^6.0.13",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.12.1",
     "install": "^0.13.0",
+    "lottie-react-native": "5.1.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-google-button": "^0.7.2",
     "react-native": "0.69.6",
     "react-native-dropdown-select-list": "^1.0.21",
     "react-native-elements": "^3.4.2",
@@ -26,8 +29,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
-    "swiper": "^8.4.2",
-    "lottie-react-native": "5.1.3"
+    "swiper": "^8.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
