--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.12.1",
@@ -29,6 +31,9 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.4",
+    "react-spinners": "^0.13.6",
+    "redux": "^4.2.0",
     "swiper": "^8.4.2"
   },
   "devDependencies": {
